Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arch-health-deployment
  labels:
    app: arch-health
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arch-health
  template:
    metadata:
      labels:
        app: arch-health
    spec:
      containers:
        - name: arch-health
          image: phichersandbox/arch-health:1.0.1
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
