Service.yml
apiVersion: v1
kind: Service
metadata:
  name: arch-health-service
spec:
  selector:
    app: arch-health
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
  type: NodePort
