Ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: arch-health-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/([a-zA-Z0-9_.-]*)/(.*)
            backend:
              serviceName: arch-health-service
              servicePort: 8080
